--- a/public/issue-public-key.html
+++ b/public/issue-public-key.html
@@ -9,63 +9,64 @@
 </head>
 <body>
 <h2>使用CA证书对公钥进行签发</h2>
-<div class="fields">
-    <div id="x509Names">
-        <div><label for="CN">CommonName：</label><input type="text" id="CN" value="my-domain.com" /></div>
-    </div>
-    <div>
-        <div><label>Days：</label><input type="radio" name="days" value="30" /> 30
-            <input type="radio" name="days" value="90" /> 90
-            <input type="radio" name="days" value="180" /> 180
-            <input type="radio" name="days" value="365" checked /> 365
-            <input type="radio" name="days" value="3650" /> 3650
+<div class="clearfix">
+    <div class="fields">
+        <div id="x509Names">
+            <div><label for="CN">CommonName：</label><input type="text" id="CN" value="my-domain.com" /></div>
         </div>
-    </div>
-    <div>
-        <div><label>KeyUsage：</label><input type="checkbox" name="keyUsage" value="DigitalSignature" checked /> DigitalSignature
-            <input type="checkbox" name="keyUsage" value="NonRepudiation" /> NonRepudiation
-            <input type="checkbox" name="keyUsage" value="KeyEncipherment" checked /> KeyEncipherment
-            <input type="checkbox" name="keyUsage" value="DataEncipherment" checked /> DataEncipherment
-            <input type="checkbox" name="keyUsage" value="KeyAgreement" /> KeyAgreement
+        <div>
+            <div><label>Days：</label><input type="radio" name="days" value="30" /> 30
+                <input type="radio" name="days" value="90" /> 90
+                <input type="radio" name="days" value="180" /> 180
+                <input type="radio" name="days" value="365" checked /> 365
+                <input type="radio" name="days" value="3650" /> 3650
+            </div>
         </div>
-        <div><label></label><input type="checkbox" name="keyUsage" value="KeyCertSign" /> KeyCertSign<span style="color: red">(CA Required)</span>
-            <input type="checkbox" name="keyUsage" value="CrlSign" /> CrlSign
-            <input type="checkbox" name="keyUsage" value="EncipherOnly" /> EncipherOnly
-            <input type="checkbox" name="keyUsage" value="DecipherOnly" /> DecipherOnly
+        <div>
+            <div><label>KeyUsage：</label><input type="checkbox" name="keyUsage" value="DigitalSignature" checked /> DigitalSignature
+                <input type="checkbox" name="keyUsage" value="NonRepudiation" /> NonRepudiation
+                <input type="checkbox" name="keyUsage" value="KeyEncipherment" checked /> KeyEncipherment
+                <input type="checkbox" name="keyUsage" value="DataEncipherment" checked /> DataEncipherment
+                <input type="checkbox" name="keyUsage" value="KeyAgreement" /> KeyAgreement
+            </div>
+            <div><label></label><input type="checkbox" name="keyUsage" value="KeyCertSign" /> KeyCertSign<span style="color: red">(CA Required)</span>
+                <input type="checkbox" name="keyUsage" value="CrlSign" /> CrlSign
+                <input type="checkbox" name="keyUsage" value="EncipherOnly" /> EncipherOnly
+                <input type="checkbox" name="keyUsage" value="DecipherOnly" /> DecipherOnly
+            </div>
         </div>
-    </div>
-    <div>
-        <div><label>ExtendedKeyUsage：</label><input type="checkbox" name="extendedKeyUsage" value="ServerAuth" checked /> ServerAuth
-            <input type="checkbox" name="extendedKeyUsage" value="ClientAuth" checked /> ClientAuth
-            <input type="checkbox" name="extendedKeyUsage" value="CodeSigning" /> CodeSigning
-            <input type="checkbox" name="extendedKeyUsage" value="EmailProtection" /> EmailProtection
-            <input type="checkbox" name="extendedKeyUsage" value="IpsecEndSystem" /> IpsecEndSystem
+        <div>
+            <div><label>ExtendedKeyUsage：</label><input type="checkbox" name="extendedKeyUsage" value="ServerAuth" checked /> ServerAuth
+                <input type="checkbox" name="extendedKeyUsage" value="ClientAuth" checked /> ClientAuth
+                <input type="checkbox" name="extendedKeyUsage" value="CodeSigning" /> CodeSigning
+                <input type="checkbox" name="extendedKeyUsage" value="EmailProtection" /> EmailProtection
+                <input type="checkbox" name="extendedKeyUsage" value="IpsecEndSystem" /> IpsecEndSystem
+            </div>
+            <div><label></label><input type="checkbox" name="extendedKeyUsage" value="IpsecTunnel" /> IpsecTunnel
+                <input type="checkbox" name="extendedKeyUsage" value="IpsecUser" /> IpsecUser
+                <input type="checkbox" name="extendedKeyUsage" value="TimeStamping" /> TimeStamping
+                <input type="checkbox" name="extendedKeyUsage" value="OCSPSigning" /> OCSPSigning
+                <input type="checkbox" name="extendedKeyUsage" value="Wireless" /> Wireless
+            </div>
         </div>
-        <div><label></label><input type="checkbox" name="extendedKeyUsage" value="IpsecTunnel" /> IpsecTunnel
-            <input type="checkbox" name="extendedKeyUsage" value="IpsecUser" /> IpsecUser
-            <input type="checkbox" name="extendedKeyUsage" value="TimeStamping" /> TimeStamping
-            <input type="checkbox" name="extendedKeyUsage" value="OCSPSigning" /> OCSPSigning
-            <input type="checkbox" name="extendedKeyUsage" value="Wireless" /> Wireless
+        <div>
+            <div><label>SignAsCA：</label><input type="checkbox" id="isCa" /> SignAsCA</div>
         </div>
-    </div>
-    <div>
-        <div><label>SignAsCA：</label><input type="checkbox" id="isCa" /> SignAsCA</div>
-    </div>
-    <div>
-        <div><label for="subjectAltNames" style="vertical-align: top">SubjectAltNames：</label><textarea id="subjectAltNames" cols="60" rows="6" placeholder="my-domain.com
-*.my-domain.com">my-domain.com
-*.my-domain.com</textarea></div>
-    </div>
-    <div>
-        <div><label for="publicKey" style="vertical-align: top">PublicKey：</label><textarea id="publicKey" cols="80" rows="6" >-----BEGIN PUBLIC KEY-----
+        <div>
+            <div><label for="subjectAltNames" style="vertical-align: top">SubjectAltNames：</label><textarea id="subjectAltNames" cols="60" rows="6" placeholder="my-domain.com
+    *.my-domain.com">my-domain.com
+    *.my-domain.com</textarea></div>
+        </div>
+        <div>
+            <div><label for="publicKey" style="vertical-align: top">PublicKey：</label><textarea id="publicKey" cols="80" rows="6" >-----BEGIN PUBLIC KEY-----
 MHYwEAYHKoZIzj0CAQYFK4EEACIDYgAEKpgSXwZmT9e+h6J6cBAFJBFtHSCatCBY
 4jkA+VNYonDInzo4n+RbqE89oueuX/nlcni0ORRXcdZ8u2uQDBfuse3T1UCF6Khj
 h8w9E+RoYOMXXPuxaItpj4XBVtbsSXE2
 -----END PUBLIC KEY-----
-</textarea></div>
-    </div>
-    <div>
-        <div><label for="caCertificate" style="vertical-align: top">CA Certificate：</label><textarea id="caCertificate" cols="80" rows="6" >-----BEGIN CERTIFICATE-----
+    </textarea></div>
+        </div>
+        <div>
+            <div><label for="caCertificate" style="vertical-align: top">CA Certificate：</label><textarea id="caCertificate" cols="80" rows="6" >-----BEGIN CERTIFICATE-----
 MIICqDCCAi+gAwIBAgIUALJO5uSg1pYj5L3CuyTK+0FA8nQwCgYIKoZIzj0EAwIw
 WjEYMBYGA1UEAwwPeW91ci1kb21haW4uY29tMRUwEwYDVQQKDAxvcmdhbml6YXRp
 b24xGjAYBgNVBAsMEW9yZ2FuaXphdGlvbl91bml0MQswCQYDVQQGEwJDTjAeFw0y
@@ -82,23 +83,24 @@ BAMCA2cAMGQCMECte0ZesGkEiNGaF3ErqTKXQ+Kh8k8f08nKQFlNrtbSgMyLgp/m
 CUMx6yxGB/t0IwIwCtJW1f7Fo47SZ7j8nz6wQbS251IatndtUM+7AiPcL63DSYEx
 iN+8VfQU5OvT8nAo
 -----END CERTIFICATE-----
-</textarea></div>
-    </div>
-    <div>
-        <div><label for="caPrivateKey" style="vertical-align: top">CA PrivateKey：</label><textarea id="caPrivateKey" cols="80" rows="6" >-----BEGIN PRIVATE KEY-----
+    </textarea></div>
+        </div>
+        <div>
+            <div><label for="caPrivateKey" style="vertical-align: top">CA PrivateKey：</label><textarea id="caPrivateKey" cols="80" rows="6" >-----BEGIN PRIVATE KEY-----
 MIG/AgEAMBAGByqGSM49AgEGBSuBBAAiBIGnMIGkAgEBBDA5yaS353B1kRmfswWJ
 4iGUavuXeGLsGIEFaiRno1ZCkMp38nXxqZiYaZyNtGhI5UugBwYFK4EEACKhZANi
 AAQq68SPdr9D9BJYCaE7TRSszHwuz9S4NtQ1zaN9XyIgowwfhYNsQ0B8RpkuNRvV
 TEpzcMkalJx7WuNGu2x3MhB1lH4sJO4cizB71ge+aDU07V+nYSnrhYTPeW79cf1p
 g8Q=
 -----END PRIVATE KEY-----
-</textarea></div>
+    </textarea></div>
+        </div>
+        <div>
+            <label></label><input type="button" value="签发证书" onclick="sign()">
+        </div>
     </div>
-    <div>
-        <label></label><input type="button" value="签发证书" onclick="sign()">
-    </div>
+    <div id="container" class="clearfix"></div>
 </div>
-<div id="container" class="clearfix"></div>
 
 <script src="clipboard.min.js"></script>
 <script src="helper.js"></script>
