--- a/public/issue-public-key.html
+++ b/public/issue-public-key.html
@@ -12,7 +12,13 @@
 <div class="clearfix">
     <div class="fields">
         <div id="x509Names">
-            <div><label for="CN">CommonName：</label><input type="text" id="CN" value="my-domain.com" /></div>
+            <div><label for="CN">CommonName：</label><input type="text" id="CN" value="my-domain.com" /> <a href="javascript:void(0)" onclick="changeOptions(this.parentNode)">More Subject Options</a></div>
+            <div style="display: none"><label for="O">Organization：</label><input type="text" id="O" value="" /></div>
+            <div style="display: none"><label for="OU">OrganizationUint：</label><input type="text" id="OU" value="" /></div>
+            <div style="display: none"><label for="C">Country：</label><input type="text" id="C" value="" /></div>
+            <div style="display: none"><label for="St">State：</label><input type="text" id="St" value="" /></div>
+            <div style="display: none"><label for="L">Locality：</label><input type="text" id="L" value="" /></div>
+            <div style="display: none"><label for="Street">Street：</label><input type="text" id="Street" value="" /></div>
         </div>
         <div>
             <div><label>Days：</label><input type="radio" name="days" value="30" /> 30
@@ -54,8 +60,8 @@
         </div>
         <div>
             <div><label for="subjectAltNames" style="vertical-align: top">SubjectAltNames：</label><textarea id="subjectAltNames" cols="60" rows="6" placeholder="my-domain.com
-    *.my-domain.com">my-domain.com
-    *.my-domain.com</textarea></div>
+*.my-domain.com">my-domain.com
+*.my-domain.com</textarea></div>
         </div>
         <div>
             <div><label for="publicKey" style="vertical-align: top">PublicKey：</label><textarea id="publicKey" cols="80" rows="6" >-----BEGIN PUBLIC KEY-----
